fixing cache cleaning variable ref

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,8 +53,8 @@
 
 - name: Clean yum cache
   command: yum clean all
-  when: ansible_os_family == rh_fam
+  when: ansible_os_family == 'RedHat'
 
 - name: Clean apt cache
   command: apt-get clean
-  when: ansible_os_family == deb_fam
+  when: ansible_os_family == 'Debian' 
